[gd_scene load_steps=8 format=3 uid="uid://dvkxdisu8cjjv"]

[ext_resource type="Script" path="res://Scenes/Powerup/powerup.gd" id="1_f7y7m"]
[ext_resource type="Texture2D" uid="uid://bag4aoqoju7ah" path="res://Scenes/Powerup/Power.png" id="2_y570l"]
[ext_resource type="Texture2D" uid="uid://c3ucu6nuqrjco" path="res://Particles/circle.png" id="3_if6lu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3svqg"]
radius = 96.0

[sub_resource type="Curve" id="Curve_hpn7l"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_m5561"]
curve = SubResource("Curve_hpn7l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kwq7n"]
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_min = 0.4
scale_max = 0.5
scale_curve = SubResource("CurveTexture_m5561")

[node name="Powerup" type="Area2D" groups=["powerup"]]
collision_mask = 2
script = ExtResource("1_f7y7m")
powerup_name = "speed"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_y570l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3svqg")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
self_modulate = Color(0, 0.619608, 1, 1)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_kwq7n")
texture = ExtResource("3_if6lu")
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
